# shape_matcher

./: EXAMPLES.md  README.md
src/: CMakeLists.txt  package.xml
src/documentation/: superpixel_image_seg_gslicr.md
src/documentation_outdated/: automatic_filter.md  shape_db_creator.md  shape_matcher.md
src/gSLICr/gSLICr_Lib/engines/: gSLICr_core_engine.cpp  gSLICr_core_engine.h  gSLICr_seg_engine.h
src/include/: auto_filter.h  contour_renderer.h  gpu_util.h  gpu_util_kernels.h  shape_analysis.h  shape_analysis_detector_common.h  shape_analysis_kernels.h  shape_analysis_matcher.h  superpixel_filter.h  superpixel_filter_kernels.h
src/launch/: shape_db_creator.launch
src/params/: angle_path_db_creator.yaml  angle_path_detector.yaml  example_db_creator.yaml  example_detector.yaml  gate_db_creator.yaml  gate_detector.yaml  heart_db_creator.yaml  heart_detector.yaml  path_detector.yaml  roulette_db_creator.yaml  roulette_detector.yaml  shape_db_creator.yaml  shape_db_creator_gate.yaml  shape_db_creator_path.yaml  superpixel_filter.yaml  torpedo_square_db_creator.yaml  torpedo_square_detector.yaml
src/src/shape_analysis/: auto_filter.cpp  contour_renderer.cpp  gpu_util.cpp  gpu_util_kernels.cu  shape_analysis.cpp  shape_analysis_detector_common.cpp  shape_analysis_kernels.cu  shape_analysis_matcher.cpp  shape_db_creator.cpp  superpixel_filter.cpp  superpixel_filter_kernels.cu
